# mini-deep-research-ai

./: .env.example  .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml  test_gemini.py
docs/: design_v1.md  implementation_plan_v1.md
src/deep_research/: __main__.py  cli.py  config.py  extractor.py  fetcher.py  gap_analyzer.py  llm_client.py  models.py  orchestrator.py  planner.py  searcher.py  synthesizer.py
